# gfe-kb-cli

./: .gitignore  README.md  pyproject.toml
gfekb/: cli.py  core.py
kb/raw/: GFE-Cases.src.md  GFE-Cmd.src.md  GFE-CmdKB-400galVC.src.md  GFE-CmdKB-APIref.src.md  GFE-CmdKB-APIspec.src.md  GFE-CmdKB-INDEX.src.md  GFE-CmdKB-cases.src.md  GFE-CmdKB-cppclasses.src.md  GFE-CmdKB-manualdiff.src.md  GFE-CmdKB-objref.src.md  GFE-CmdKB-paths.src.md  GFE-CmdKB-pitfalls.src.md  GFE-CmdKB-tools.src.md  GFE-Explicit.src.md  GFE-FAQ.src.md  GFE-Implicit.src.md  GFE-Iso.src.md  GFE-SSA.src.md  GFE-UserGuide-2026-附录.src.md  GFE-UserGuide.src.md  GFE2026-CM-ch01-CM1.src.md  GFE2026-CM-ch02-CM2-update2.src.md  GFE2026-CM-ch03-CM3-update2.src.md  GFE2026-CM-ch04-CM4-update2.src.md  GFE2026-CM-ch05-CM5-update2.src.md  GFE2026-CM-ch06-CM6-update2.src.md  GFE2026-CM-ch07-CM7-update2-存在bug.src.md  GFE2026-CM-ch07-CM7.src.md  GFE2026-CM-ch10-第十章命令流-弹塑性.src.md  GFE2026-CM-ch10-第十章命令流-弹性.src.md  GFE2026-CM-ch11-CM11.src.md  GFE2026-CM-ch14-T14.src.md  GFE2026-CM-ch15-CM15V8.src.md
kb/wiki/concepts/: Arias强度.md  Armstrong-Frederick 非线性随动硬化.md  BRBF钢框架.md  Bouc-Wen滞回模型.md  CONWEP.md  DCZ本构模型.md  Davidenkov.md  Drucker-Prager.md  GFE对象引用关系.md  GFE求解器内核.md  HSS本构.md  IPA简化抗震分析法.md  MIC 最大信息系数.md  Masing法则.md  P-Delta效应.md  PrePo.md  SAUI.md  SAUIC.md  SIUS.md  SPH光滑粒子流体动力学.md  SSSI 结构-土-结构相互作用.md  TMD 调谐质量阻尼器.md  (+104 more)
kb/yjk/: YJK-API-index.src.md  YJK-CmdKB-api.src.md  YJK-CmdKB-commands.src.md  YJK-CmdKB-patterns.src.md  YJK-CmdKB-workflow.src.md
skill/: SKILL.md
skill/GFE-autobuilding/: SKILL.md
(+157 files in other folders)
